--- a/bin/src/main/resources/application-mysql.properties
+++ b/bin/src/main/resources/application-mysql.properties
@@ -1,5 +1,5 @@
-server.port=8484
-spring.datasource.url=jdbc:mysql://localhost:3306/ppmtooldbonline
+server.port=8383
+spring.datasource.url=jdbc:mysql://localhost:3306/ppmtooldb
 spring.datasource.driverClassName=com.mysql.cj.jdbc.Driver
 spring.datasource.username=root
 spring.datasource.password=1234
